# StellarSwipe-Contract

./: TWO_STEP_ADMIN_TRANSFER_IMPLEMENTATION.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/hooks/: useWallet.ts
frontend/src/components/: HUD.css  HUD.tsx
frontend/src/hooks/: useDebouncedPolling.ts
frontend/src/utils/: stellarswipe-adapter.ts
frontend/stories/: HUD.stories.ts
stellar-swipe/: Cargo.toml
stellar-swipe/contracts/auto_trade/src/: admin.rs  auth.rs  errors.rs  lib.rs  portfolio_insurance.rs  risk.rs  storage.rs  test.rs  test_admin_transfer.rs
stellar-swipe/contracts/bridge/src/: lib.rs
stellar-swipe/contracts/common/src/: lib.rs
stellar-swipe/contracts/fee_collector/: Cargo.toml
stellar-swipe/contracts/fee_collector/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
stellar-swipe/contracts/governance/: Cargo.toml
stellar-swipe/contracts/governance/src/: errors.rs  lib.rs  quadratic_voting.rs  test.rs
stellar-swipe/contracts/oracle/src/: admin.rs  events.rs  lib.rs  test_health.rs  types.rs
stellar-swipe/contracts/shared/src/: lib.rs
stellar-swipe/contracts/signal_registry/src/: admin.rs  errors.rs  events.rs  leaderboard.rs  lib.rs  ml_scoring.rs  test_combos.rs  test_contests.rs  test_emergency.rs  test_health.rs  test_scheduling.rs  types.rs
stellar-swipe/contracts/trade_executor/: Cargo.toml
stellar-swipe/contracts/user_portfolio/: Cargo.toml
stellar-swipe/contracts/user_portfolio/src/: lib.rs  queries.rs  storage.rs
stellar-swipe/contracts/user_portfolio/src/tests/: test_pnl.rs
(+9 files in other folders)
