[package]
name = "user_portfolio"
version = "0.1.0"
description = "Stellar Swipe user portfolio — positions and P&L queries"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar_swipe_common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
